# Monitoring_System

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  docker-compose.yml  setup_monitoring.bat  setup_monitoring.sh
.github/workflows/: manual-test-publish.yml
backend/: .dockerignore  CMakeLists.txt  Dockerfile
backend/src/: main.cpp  rest_server.cpp  rest_server.h  server_config.cpp  server_config.h  system_metrics.cpp  system_metrics.h  token_utils.cpp  token_utils.h  websocket_server.cpp  websocket_server.h
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  config.js  index.css  index.js
frontend/src/components/: AppHeader.js  ApplicationUsagePanel.js  ConnectionsChart.js  DockerResourcesPanel.js  DomainTrafficPanel.js  HistoryPanel.js  KpiGrid.js  MetricCard.js  MetricChart.js  MetricDetailsPanel.js  OptimizationInsightsPanel.js  PerformanceSummary.js  SecurityOverview.js  SettingsPanel.js  StatusTimeline.js
frontend/src/constants/: status.js
frontend/src/hooks/: useLiveMetrics.js  useMetricsHistory.js  useSettings.js
frontend/src/utils/: formatters.js  health.js  insights.js  metricDetails.js  payload.js  statistics.js  trends.js
grafana/provisioning/dashboards/: cpp_monitoring.json  dashboards.yml
grafana/provisioning/datasources/: influxdb.yml
